# PedestrianTrackingOpenvino

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/lib/: Tracker_by_detection.cpp  Tracker_by_detection.hpp  Tracking.cpp  Tracking.h  configurator.cpp  configurator.h  dnn_loader.cpp  dnn_loader.h  followme.h  kalman_filt.cpp  kalman_filt.h  people.cpp  people.h  pose_basic.cpp  pose_basic.h  pose_extractor.cpp  pose_extractor.h  pose_gesture.cpp  pose_gesture.h  pose_utils.cpp  pose_utils.h  rs_utility.cpp  rs_utility.h  utils.cpp  utils.h
